--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Proyecto meeti con node, PostgreSQL y EJS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./index.js"
   },
   "author": "Giovanni Garrido",
   "license": "ISC",
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "express-ejs-layouts": "^2.5.1"
   }
 }
