--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "express-ejs-layouts": "^2.5.1"
+    "express-ejs-layouts": "^2.5.1",
+    "pg": "^8.11.5",
+    "sequelize": "^6.37.3"
   }
 }
