--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.0",
+    "express-validator": "^7.0.1",
     "pg": "^8.11.5",
     "sequelize": "^6.37.3"
   }
