--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
+    "nodemailer": "^6.9.13",
     "pg": "^8.11.5",
     "sequelize": "^6.37.3"
   }
