--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.11.5",
     "sequelize": "^6.37.3",
+    "shortid": "^2.2.16",
     "uuid": "^9.0.1"
   }
 }
